# WS_Mdl

./: .dvcignore  .gitignore  README.md  READ_ME.md  _Cmds_to_make_git.txt  gitignore_copy  pixi.toml  q  setup.py
code/: .tmp_check_ini_type.py  .tmp_dbg_err.py  .tmp_dbg_imports.py  .tmp_dbg_wb.py  .tmp_dbg_wb_import.py  RunMng.ipynb  RunMng_v0.1.ipynb  pixi.toml  pyproject.toml  ruff.toml  setup.py
code/DA/: KNMI23_CC_Sc_TS_DA.ipynb
code/DA/P_PET_TS_DA/: P_PET_TS_DA.ipynb
code/Env/: Env_NBr10.yml  Env_NBr7.yml  Env_NBr7_WS.yml  How_to_make_env.txt  WS_conda_env_NBr22.yml  WS_pip_env_NBr16.txt  WS_pip_env_NBr22.txt  freeze_WS_env.py  freeze_env_WS.py  freeze_pixi_env.py  how_to_make_Env (2).txt  how_to_make_Env.md  how_to_make_Env.txt  pixi_env_Fis.txt
code/Env/SS/: freeze_env_WS_w_WS_Mdl.py
code/Env/conda_Env_YMLs/: Env_NBr12.yml  WS_conda_env_NBr16.yml  WS_env_NBr24.yml  WS_env_NBr27.yml  WS_pip_env_NBr16.txt  WS_pip_env_NBr18.txt
code/Jupyter/DA/: KNMI23_CC_Sc_TS_DA.ipynb
code/Jupyter/PoP/: TS_from_IDF.ipynb
code/Jupyter/explore/: .gitignore  (+1 more)
code/Mdl_Fi_restructure/: Mdl_Fi_restructure.ipynb
code/PoP/: IDF_to_TIF.ipynb  PoP_NBr12-14.ipynb  TS_from_IDF.ipynb
code/PrSimP/: write_SFR_NBr17.ipynb  write_SFR_NBr19.ipynb  write_SFR_NBr20.ipynb  write_SFR_NBr25.ipynb
code/Py/: test.py
code/QGIS/: Sblg.py  Sblg_nice_steps.py  startup.py
code/WS_Mdl/: WS_Mdl.py  __init__.py  __main__.py  calcs.py  geo.py  plot_SFR.py  utils.py  utils_imod.py
code/WS_Mdl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+912 files in other folders)
